--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,45 @@
-version: 2.1
+version: 2
 
 jobs:
-  build:
+  run-python-tests:
+  # flak8 and test unit tests
     docker:
-      - image: circleci/python:3.6.9
+      - image: circleci/python:3.6
+        environment:
+          PYTHONUNBUFFERED: 1
+          DJANGO_SETTINGS_MODULE: config.settings.dev
     steps:
       - checkout
-      - run: echo 'Hello World'
+      - run:
+          command: |
+            sudo pip install pipenv
+            pipenv install
+            pipenv run python manage.py test
+
+#  deploy-to-stage:
+#  # deploy to https://staging.kevinharper.com/
+#  #   on AWS
+
+
+#  deploy-to-prod:
+#  # deploy to https://kevinharper.com/
+#  #   on Digital Ocean
+
+workflows:
+  version: 2
+  test-local_deploy-stage_deploy-prod:
+    jobs:
+      - run-python-tests
+#      - review-PR:
+#          # Visually check code changes that were
+#          #   submitted via PR
+#          type: approval
+#          requires:
+#            - run-python-tests
+#      - deploy-to-stage:
+#         requires:
+#           - review-PR
+#      - deploy-to-prod:
+#          filters:
+#            branches:
+#              only: master
