--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   run-python-tests:
-  # flak8 and test unit tests
+  # flake8 and test unit tests
     docker:
       - image: circleci/python:3.6
         environment:
@@ -14,6 +14,7 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install
+            pipenv run flake8
             pipenv run python manage.py test
 
 #  deploy-to-stage:
