--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
     docker:
       - image: circleci/python:3.6
     steps:
+      - checkout
       - run:
           name: Deploy to Stage
           command: |
