--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Deploy to Stage
           command: |
-            ssh -i $STAGING_KEY -l $STAGINGUSERNAME -W $STAGINGHOST:22 "cd sites/staging-kevinharper-com && ./deploy.sh"
+            ssh -i $STAGING_KEY -l $STAGINGUSERNAME -W $STAGINGHOST:22
 
 
 #  deploy-to-prod:
