Updated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
       - checkout
       - run:
           name: Deploy to Stage
-          command: |
-            ssh -i $KEY -l $USERNAME -W $HOST:22
+          command: ssh -i $KEY -l $USERNAME -W $HOST:22
 
 
 #  deploy-to-prod:
