Updated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
       - checkout
       - run:
           name: Deploy to Stage
-          command: |
-            ssh -v -i $KEY $USER@$HOST "echo success"
+          command: ssh -v -i $KEY $USER@$HOST "echo success"
 
 
 #  deploy-to-prod:
