--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: "Deploy to Stage"
           command: |
-            ssh -v -i $STAGING_KEY $STAGING_USER@$STAGING_HOST "echo success"
+            ssh -v -i $STAGING_KEY $STAGING_USER@$STAGING_HOST "touch from_circleci.txt"
 
 
 #  deploy-to-prod:
