Updated CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,13 @@ jobs:
           command: |
             ssh $STAGING_USER@$STAGING_HOST << EOF
 
-              cd sites/staging-kevinharper-com
-              git clone https://github.com/khdc-me/ws-kevinharper.git
-              cp staging_settings.py ws-kevinharper/config/settings/
-              rm ws-kevinharper/docker-compose.yml
-              cp docker-compose.yml ws-kevinharper/
-              cd ws-kevinharper
-              docker-compose up -d
+              cd sites/staging-kevinharper-com \
+              && git clone https://github.com/khdc-me/ws-kevinharper.git \
+              && cp staging_settings.py ws-kevinharper/config/settings/ \
+              && rm ws-kevinharper/docker-compose.yml \
+              && cp docker-compose.yml ws-kevinharper/ \
+              && cd ws-kevinharper \
+              && docker-compose up -d
 
             EOF
 
