--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           fingerprints:
             - "a6:fc:3f:ab:e9:d6:02:96:30:69:59:ac:54:f7:ec:b3"
       - run:
-          name: "Build and push Docker image"
+          name: "Build and push staging image to Docker Hub"
           command: |
             echo "$DOCKER_PASSWD" | docker login --username $DOCKER_USER --password-stdin
             docker build -t khdcme/www-kevinharper-com:staging .
@@ -44,34 +44,28 @@ jobs:
   #   on Digital Ocean
     machine: true
     steps:
+      - checkout
       - add_ssh_keys:
           fingerprints:
             - "a6:fc:3f:ab:e9:d6:02:96:30:69:59:ac:54:f7:ec:b3"
       - run:
-          name: "Deploy to Staging"
+          name: "Purge from Staging"
           command: |
             ssh $STAGING_USER@$STAGING_HOST << EOF
-
-              cd sites/staging-kevinharper-com/ws-kevinharper \
-              && docker-compose down \
-              && cd .. \
-              && rm -rf ws-kevinharper
-
+              docker-compose -f sites/staging-kevinharper-com/docker-compose.yml down \
+              && docker rmi khdcme/www-kevinharper-com:staging
             EOF
-
+      - run:
+          name: "Build and push latest image to Docker Hub"
+          command: |
+            echo "$DOCKER_PASSWD" | docker login --username $DOCKER_USER --password-stdin
+            docker build -t khdcme/www-kevinharper-com:latest .
+            docker push khdcme/www-kevinharper-com:latest
+      - run:
+          name: "Deploy to Production"
+          command: |
             ssh $PROD_USER@PROD_HOST << EOF
-
-              cd sites/production-kevinharper-com \
-              && tar czf backups/production-kevinharper-com-$(date '+%Y-%m-%d').tar.gz production-kevinharper-com/ \
-              && rm -rf ws-kevinharper \
-              && git clone https://github.com/khdc-me/ws-kevinharper.git \
-              && cp production.py ws-kevinharper/config/settings/ \
-              && rm ws-kevinharper/docker-compose.yml \
-              && cp docker-compose.yml ws-kevinharper/ \
-              && cd ws-kevinharper \
-              && docker-compose up --build -d
-
-
+              docker-compose -f sites/www-kevinharper-com/docker-compose.yml up -d
             EOF
 
 workflows:
