--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   web:
     build: .
     command: python /usr/src/app/manage.py runserver 0.0.0.0:8000
+    environment:
+      - DEBUG=True
     volumes:
       - .:/usr/src/app/
     ports:
