--- a/docker-compose_test.yml
+++ b/docker-compose_test.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 
 networks:
   internal:
@@ -12,6 +12,7 @@ services:
       - .:/usr/src/app/
     environment:
       - DJANGO_SETTINGS_MODULE=config.settings.settings
+      - DEBUG=True
     expose:
       - 8000
     networks:
